fix screenlocker "hiding", event processing, screen adaptation

REVIEW: 108375
BUG: 311116