ksmserver/screenlocker/greeter/greeterapp.h
@@ -49,7 +49,7 @@ protected:
 
 private Q_SLOTS:
     void viewStatusChanged(const QDeclarativeView::Status &status);
-    void prepareShow();
+    void desktopResized();
     void resetRequestIgnore();
     void suspendToRam();
     void suspendToDisk();
